[project]
name = "farp_template"
version = "0.1.0"
description = ""
authors = [
    {name = "ReAXET", email = "joshua.sturm@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
